2001-11-08  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSHTTPHURLHandle.m: handle writing of nil properties and
	use of empty strings as proxy settings.  Minimise delays when
	tunneling SSL
	* Source/UnixFileHandle.m: Improve error logging with ssl.

2001-11-07  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/foundation/NSUserDefaults.h: Add _lock ivar
	* Source/NSUserDefaults.m: initial attempt at thread-safety.

2001-11-07  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Foundation/NSString.h: removed stringByTrimming...Whitespace
	methods as they just duplicate the stringByTrimming...Spaces
	* Source/NSString.m: ditto
	Optimised the space trimming methods - avoid using character sets and
	creating unnecessary intermediary objects.

2001-11-07  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSUserDefaults.m: force defaults data to be read/write
	only to the user.  Supplied by Ludovic Marcotte

Wed Nov  7 09:04:51 2001  Nicola Pero  <n.pero@mi.flashnet.it>

	After this change you need the latest gnustep-make to compile.
	* Source/Makefile.postamble: Removed rules to manually compile
	NSInvocation.m, NSConnection.m and mframe.m.
	(mframe.m_FILE_FILTER_OUT_FLAGS): Set to filter out optimization
	flags when compiling mframe.m.
	(NSConnection.m_FILE_FILTER_OUT_FLAGS): Idem.
	(NSInvocation.m_FILE_FILTER_OUT_FLAGS): Idem.
	
2001-11-01  Adam Fedor  <fedor@gnu.org>

	* Source/NSData.m: Add an include to avoid some warnings.

Tue Oct 30 14:33:48 2001  Nicola Pero  <nicola@brainstorm.co.uk>

	* Testing/benchmark.m (bench_object): Added test showing that a
	call to super in a category method - no matter if a class or an
	instance method - has the same big performance hit that a class
	method invocation has - at least with the current GNU runtime.

2001-10-28  Adam Fedor  <fedor@gnu.org>

	* Source/NSFileManager.m (_attributesAtPath:traverseLink:forCopy:): 
	Make NSLog message into fprintf to avoid recursion.
